feat: done with payment apis
